.container-full padding fix on mobile

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -65,11 +65,15 @@ body {
 
 .container-full {
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 @media only screen and (min-width: 48rem) {
   .container {
+    padding: 0 2rem;
+  }
+
+  .container-full {
     padding: 0 2rem;
   }
 }
